Fix status visibility on renewal input label

--- a/sass/abstracts/_variables-et-mixins.scss
+++ b/sass/abstracts/_variables-et-mixins.scss
@@ -95,7 +95,34 @@ $colors: (
 		color:var(--blanc) !important;
 	}
 }
-
+@mixin checkbox-label {
+	--size:1.4rem;
+	--color:var(--bleu);
+	color:var(--color);
+	&::before, &::after { // la marque peut être avant ou après le label
+		align-items: center;
+		border: solid 1px var(--color);
+		border-radius: 100%;
+		content:'l';
+		color:transparent;
+		display: inline-flex;
+		font-size: 120%;
+		height:var(--size);
+		justify-content: center;
+		margin-right: 0.5ch;
+		padding-bottom: 1px;
+		position: relative;
+		text-align: center;
+		top: 1px;
+		width:var(--size);
+	}
+	&::after {
+		//par défaut elle est avant
+		display:none;
+		margin-left: 0.5ch;
+		margin-right:0;
+	}
+}
 @mixin screen-reader-text {
 	border: 0;
 	clip: rect(1px, 1px, 1px, 1px);
