--- a/sass/templates/_checkout.scss
+++ b/sass/templates/_checkout.scss
@@ -108,6 +108,9 @@
 		label {
 			line-height: 1.1;
 		}
+		.pmpro_checkout-fields {
+			max-width:48rem;
+		}
 	}
 
 	#pmpro_tos_fields {
